<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pomosh</string>
    
    <!-- Settings -->
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="theme">Тема</string>
    <string name="dark_mode">Темная тема</string>
    <string name="light_mode">Светлая тема</string>
    <string name="save">Сохранить</string>
    <string name="font_size">Размер шрифта</string>
    <string name="select_language">Выберите язык</string>
    <string name="russian">РУС</string>
    <string name="english">АНГ</string>
    <string name="contact_tech_support">Техническая поддержка</string>
    
    <!-- Product Fields -->
    <string name="product_name_hint">Название продукта</string>
    <string name="expiration_date_hint">Срок годности (дд.мм.гггг)</string>
    <string name="calories_hint">Калории</string>
    <string name="quantity_hint">Количество</string>
    <string name="calories_suffix">ккал</string>
    <string name="quantity_suffix">шт</string>
    <string name="product_price_hint">Цена</string>
    <string name="currency">руб</string>
    
    <!-- Buttons -->
    <string name="scanner_button_text">Сканировать штрихкод</string>
    <string name="save_product_button_text">Сохранить</string>
    <string name="save_button_text">Сохранить</string>
    <string name="clear_all_button">Очистить все</string>
    <string name="add_product_button">Добавить продукт</string>
    <string name="add_product_button_text">Добавить</string>
    
    <!-- Navigation -->
    <string name="nav_page_1">Заметки</string>
    <string name="nav_page_2">За покупками</string>
    <string name="nav_page_3">Список</string>
    <string name="nav_page_4">Сумка</string>
    <string name="nav_page_5">Настройки</string>
    
    <!-- Messages -->
    <string name="total_calories_text">Итого калорий: %1$d</string>
    <string name="total_price_text">Итого: %1$.2f руб</string>
    <string name="list_cleared">Список очищен</string>
    <string name="product_saved">Продукт сохранен!</string>
    <string name="scan_cancelled">Сканирование отменено</string>
    <string name="scan_error">Ошибка: неверный штрихкод</string>
    <string name="scan_prompt">Сканируйте штрихкод</string>
    <string name="error_required_fields">Ошибка: все обязательные поля должны быть заполнены</string>
    <string name="error_invalid_date">Ошибка: неверный формат даты</string>
    
    <!-- Font Sizes -->
    <string name="small">Маленький</string>
    <string name="medium">Средний</string>
    <string name="large">Большой</string>
</resources>