<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Product Name -->
    <EditText
        android:id="@+id/productNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text"/>

    <!-- Product Quantity -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/quantityEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/quantity_suffix"
            android:inputType="number"
            android:importantForAccessibility="yes"/>

        <!-- Postfix "шт" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_suffix"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:gravity="center_vertical"/>
    </LinearLayout>


    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:background="?attr/colorControlNormal"
        android:textColor="?android:textColorPrimary"/>

    <!-- Product List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/productListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>